# obstacle_predictor_scan

./: README.md  package.xml
obstacle_predictor_modified/: CMakeLists.txt  setup.py
obstacle_predictor_modified/launch/: obstacle_predictor.launch
obstacle_predictor_modified/params/: costmap_common_params.yaml
obstacle_predictor_modified/scripts/: obstacle_predictor.py  utils.py
params/: dynamic_costmap_params.yaml  static_costmap_params.yaml
