<package format="2">
	<name>obstacle_predictor</name>
	<version>0.0.0</version>
	<description>Package obstacle_predictor</description>
	<maintainer email="lim.yonsei@gmail.com">Jaehyun Lim</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>rospy</build_export_depend>
	<build_export_depend>std_msgs</build_export_depend>
	<exec_depend>rospy</exec_depend>
	<exec_depend>std_msgs</exec_depend>
	<exec_depend>message_runtime</exec_depend>
    <exec_depend>move_base</exec_depend>
</package>
